# inscript

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_QUICK_REF.md  EXPANSION_SUMMARY.md  GITHUB_PUBLISHING_GUIDE.md  INSTALL.md  InScript_Language_Audit.md  LICENSE  README.md  ROADMAP.md  SETUP_COMPLETE.md  VSCODE_INSTALLATION.md  ast_nodes.py  index.html  inscript.bat  inscript.py  interpreter.py  lexer.py  myprogram.ins.py  myprogram.ins.txt  parser.py  playground.html  pyproject.toml  quickstart.py  repl.py  setup.py  stdlib.py  test_interpreter.py  test_lexer.py  test_parser.py  test_stdlib.py
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: LANGUAGE_SPEC.md  STDLIB.md  index.html
docs/docs/errors/: index.html
examples/: conditionals.ins  data_structures.is  fibonacci.is  file_operations.is  hello.ins  json_random.ins  list_algorithms.is  list_utils.ins  loops.ins  math_utils.is  prime_finder.ins  statistics.ins  string_analyzer.ins  string_utils.ins
final/: docs-site.html  inscript-lang-0.5.0.tgz
final/github-actions/: ci.yml  release.yml
final/python-dist/: inscript_lang-0.5.0-py3-none-any.whl
final/vscode-extension/: inscript-lang-0.5.0.vsix  package-lock.json  package.json  tsconfig.json
final/vscode-extension/snippets/: inscript.json
final/web-export/: deploy-itch.sh  game.insb  game.js  index.html  manifest.json  sw.js
final/web-export/.github/workflows/: web-deploy.yml
inscript/: __init__.py  builtins.py  cli.py  interpreter.py  lexer.py  parser.py
inscript_package/: .gitignore  .gitignore_root_copy.txt  ARCHITECTURE.md  CHANGELOG.md  INSCRIPT_HANDOUT.md  InScript_Language_Audit.md  NEXT_PHASE.md  README.md  REPL_Tutorial.md  ROADMAP.md  __init__.py  analyzer.py  ast_nodes.py  compiler.py  environment.py  errors.py  index.html  inscript.py  inscript_fmt.py  inscript_test.py  interpreter.py  lexer.py  parser.py  pong.ins  pong_runner.py  pygame_backend.py  pyproject.toml  repl.py  setup.py  stdlib.py  stdlib_extended.py  stdlib_extended_2.py  stdlib_game.py  stdlib_values.py  test_analyzer.py  test_audit.py  test_comprehensive.py  test_interpreter.py  test_lexer.py  test_parser.py  (+13 more)
inscript_package/.github/workflows/: publish.yml  test.yml
inscript_package/docs/: index.html
inscript_package/docs/stdlib/: index.html
inscript_package/examples/: asteroid_blaster.ins  breakout.ins  dino.ins  particles.ins  platformer.ins  pong.ins
inscript_package/lsp/: __init__.py  completions.py  diagnostics.py  hover.py  server.py
inscript_package/test_env/: pyvenv.cfg
inscript_package/test_env/Scripts/: activate  activate.bat
tests/: test_interpreter.py
vscode-extension/: .vscodeignore  BUILD.md  LICENSE  README.md  extension.js  inscript-0.2.0.vsix  language-configuration.json  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: inscript.json  inscript.tmLanguage.json
