[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "inscript"
version = "0.1.0"
description = "Inscript - A clean, Python-like interpreted programming language"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Inscript Community"},
]
keywords = ["language", "interpreter", "programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Languages",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/yourusername/inscript"
Documentation = "https://github.com/yourusername/inscript#readme"
Repository = "https://github.com/yourusername/inscript.git"
Issues = "https://github.com/yourusername/inscript/issues"

[project.scripts]
inscript = "inscript:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["inscript*"]
