[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "inscript-lang"
version         = "1.0.0"
description     = "InScript — a modern scripting language for game development"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
keywords        = ["language", "scripting", "game-development", "interpreter"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
lsp = ["pygls>=1.3"]

[project.scripts]
inscript = "inscript_package.inscript:main"

[project.urls]
Homepage   = "https://github.com/authorss81/inscript"
Repository = "https://github.com/authorss81/inscript"

[tool.setuptools.packages.find]
where = ["."]
include = ["inscript_package*"]

[tool.setuptools.package-data]
inscript_package = ["examples/*.ins"]
