[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inscript-lang"
version = "1.6.0"
description = "InScript — a game-focused scripting language with 59 game modules and a bytecode VM"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Shreyasi Sarkar" }]
requires-python = ">=3.10"
keywords = ["game", "scripting", "language", "gamedev", "gdscript"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Interpreters",
]
dependencies = []

[project.optional-dependencies]
game = ["pygame>=2.0"]
lsp  = ["pygls>=1.0"]
all  = ["pygame>=2.0", "pygls>=1.0"]

[project.urls]
Homepage      = "https://github.com/authorss81/inscript"
Repository    = "https://github.com/authorss81/inscript"
"Bug Tracker" = "https://github.com/authorss81/inscript/issues"
Documentation = "https://authorss81.github.io/inscript/docs/"

[project.scripts]
inscript = "inscript:main"

[tool.setuptools]
py-modules = [
    "inscript", "repl", "lexer", "parser", "interpreter",
    "compiler", "vm", "analyzer", "errors", "environment",
    "stdlib", "stdlib_extended", "stdlib_extended_2", "stdlib_game",
    "stdlib_values", "ast_nodes", "inscript_fmt", "inscript_test",
    "pygame_backend"
]

[tool.setuptools.package-data]
"*" = ["examples/*.ins", "*.md", "lsp/*.py"]
